--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav id="links">
             <ol>
-                <img src="imagens/logo.png" alt="Logo kakozinheiro">
+                <div id="logo"><img src="imagens/logo.png" alt="Logo kakozinheiro"></div>
                 <li> <a href="">Bolos</a></li>
                 <li><a href="">Caldos</a></li>
                 <li><a href="">Jantar</a></li>
