--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <header>
-        <nav id="links">
+        <nav >
             <ol>
                 <div id="logo"><img src="imagens/logo.png" alt="Logo kakozinheiro"></div>
-                <li> <a href="">Bolos</a></li>
-                <li><a href="">Caldos</a></li>
-                <li><a href="">Jantar</a></li>
-                <li><a href="">Sobremesas</a></li>
-                <li><a href="">Saladas</a></li>
-                <li><a href="">Sobre</a></li>
-                <li><a href=""> facebook</a></li>
-                <li><a href=""> TikTok </a></li>
-                <li><a href=""> YouTube</a></li>
+                <div id="menu">
+                    <li> <a href="">Bolos</a></li>
+                    <li><a href="">Caldos</a></li>
+                    <li><a href="">Jantar</a></li>
+                    <li><a href="">Sobremesas</a></li>
+                    <li><a href="">Saladas</a></li>
+                    <li><a href="">Sobre</a></li>
+                    <li><a href=""> facebook</a></li>
+                    <li><a href=""> TikTok </a></li>
+                    <li><a href=""> YouTube</a></li>
+                </div>
             </ol>
         </nav>
     </header>
