add descrição do destaque

--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
                 </span>
                 <div class="imagem-destaque">
                     <img src="imagens/receita-destaque.jpg" alt=" exemplo de receita">
+                    <div class="descricao-destaque">
+                        <h1>Titulo receita</h1>
+                         <h2>Tipo de receita</h2>
+                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse ea unde nemo earum provident aperiam ullam dolores voluptates laborum, porro autem facere consequatur deserunt repellat dicta voluptatem totam est?
+                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum qui nulla velit cumque deserunt iure quia cupiditate beatae blanditiis iste perspiciatis dolorem, eaque veritatis maiores quis ullam vel et alias.
+                        </p>
+                    </div>
                     <a href="#"> Acesse Aqui</a>
+                    
                 </div>
         </div>  
         <span class="destaque">Novas Receitas </span>
