add a parte sobre

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <li><a href="">Jantar</a></li>
                             <li><a href="">Sobremesas</a></li>
                             <li><a href="">Saladas</a></li>
-                            <li><a href="">Sobre</a></li>
+                            <li><a href="#dados-sobre" id="sobre">Sobre</a></li>
                             <li><a href="">
                                  <i class="fa-brands fa-tiktok" id="tiktok">                              
                              </i> </a></li>
@@ -41,6 +41,7 @@
              </div>
         </header><!-- fim navbar-->
     <body>       
+        <!-- destaque-->
         <div class="pagina-destaque">
                 <div class="texto-receita-destaque">
                     <p>Descubra o sabor da novidade com nossa mais recente receita! Visite nosso blog e deixe-se encantar pelos aromas e sabores irresistíveis que preparamos para você. Não perca a oportunidade de experimentar algo verdadeiramente delicioso. Acesse agora e experimente essa experiência culinária única! Siga-nos para não perder nenhuma das nossas novas criações e compartilhe com seus amigos para que eles também possam desfrutar dessa delícia. Prepare-se para uma jornada gastronômica incrível e descubra um mundo de sabores no nosso blog! </p>
@@ -59,7 +60,8 @@
                     <a href="#"> Acesse Aqui</a>
                     
                 </div>
-        </div>  
+        </div>  <!--Fim destaque-->
+        <!--Novas receitas-->
         <span class="destaque">Novas Receitas </span>
         <div class="novas-receitas">
            
@@ -103,6 +105,29 @@
                 </div>
                 <a href="#"> Acesse Aqui</a>
             </div> 
+        </div><!--Fim novas receitas-->
+        <span class="destaque">Vale apena assistir <i class="fa-brands fa-youtube" id="youtube"></i></span>
+        <div class="videos"><!-- Vídeos do Youtube-->
+            <div class="video">
+                    <iframe width="340" height="315" src="https://www.youtube.com/embed/BlOgafl1aa0?si=1Ax8IyAWpSTLOamp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe width="340" height="315" src="https://www.youtube.com/embed/_DgeMGtrHjc?si=CR6_0z_kIJ84Z9lm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div><!--Fim videos youtube-->
+        <div class="sobre" id="dados-sobre">
+            <figure class="img-sobre">
+                <img src="imagens/logo-sobre.png" alt="Imagem do criador da página">
+                <figcaption>Imagem do criador da página e das receitas - <span class="autor">Kayque Knupp</span>
+                </figcaption>
+            </figure>
+            <div class="dados-sobre">
+                <h2>Sobre</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex fuga, dolorem reprehenderit incidunt ducimus minima laborum dignissimos perferendis veritatis quisquam doloribus eligendi harum quo qui voluptates ipsam ratione blanditiis sequi.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam vero dolore reprehenderit sed excepturi eos porro non dolores rem, nihil doloribus, veniam corrupti odit iure ducimus maxime repudiandae laboriosam! Impedit!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam pariatur ea dignissimos commodi eaque possimus laudantium nulla ad consequatur quisquam fugiat, ullam, quasi ex ut earum harum unde. Voluptas, officiis?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, accusamus quisquam sed, suscipit, autem nemo quam cum quod illum in ab earum distinctio reprehenderit voluptates qui iste maiores hic provident?</p>
+            </div>
         </div>
  </body>
 </div>
