melhorias e rolagem ao topo

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 <div class="texto-receita-destaque">
                     <p>Descubra o sabor da novidade com nossa mais recente receita! Visite nosso blog e deixe-se encantar pelos aromas e sabores irresistíveis que preparamos para você. Não perca a oportunidade de experimentar algo verdadeiramente delicioso. Acesse agora e experimente essa experiência culinária única! Siga-nos para não perder nenhuma das nossas novas criações e compartilhe com seus amigos para que eles também possam desfrutar dessa delícia. Prepare-se para uma jornada gastronômica incrível e descubra um mundo de sabores no nosso blog! </p>
                 </div>
-                <span class="destaque">Receita em Destaque
+                <span class="destaque"><i class="fa-solid fa-star"></i> Receita em Destaque <i class="fa-solid fa-star"></i>
                 </span>
                 <div class="imagem-destaque">
                     <img src="imagens/receita-destaque.jpg" alt=" exemplo de receita">
                     <div class="descricao-destaque">
                         <h1>Titulo receita</h1>
-                         <h2>Tipo de receita</h2>
+                         <h2> Tipo de receita</h2>
                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse ea unde nemo earum provident aperiam ullam dolores voluptates laborum, porro autem facere consequatur deserunt repellat dicta voluptatem totam est?
                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum qui nulla velit cumque deserunt iure quia cupiditate beatae blanditiis iste perspiciatis dolorem, eaque veritatis maiores quis ullam vel et alias.
                         </p>
@@ -129,6 +129,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, accusamus quisquam sed, suscipit, autem nemo quam cum quod illum in ab earum distinctio reprehenderit voluptates qui iste maiores hic provident?</p>
             </div>
         </div>
+        <div class="ir-ao-topo">
+            <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
+        </div>
  </body>
+
+ <footer>&copy;Kakozinheiro</footer>
 </div>
 </html>
