--- a/index.html
+++ b/index.html
@@ -44,17 +44,18 @@
         <!-- destaque-->
         <div class="pagina-destaque">
                 <div class="texto-receita-destaque">
-                    <p>Descubra o sabor da novidade com nossa mais recente receita! Visite nosso blog e deixe-se encantar pelos aromas e sabores irresistíveis que preparamos para você. Não perca a oportunidade de experimentar algo verdadeiramente delicioso. Acesse agora e experimente essa experiência culinária única! Siga-nos para não perder nenhuma das nossas novas criações e compartilhe com seus amigos para que eles também possam desfrutar dessa delícia. Prepare-se para uma jornada gastronômica incrível e descubra um mundo de sabores no nosso blog! </p>
+                    <p>
+                        Bem-vindo ao Kakozinheiro, seu destino online para explorar o mundo da culinária de maneira inovadora e deliciosa! Aqui, você encontrará uma coleção diversificada de receitas cuidadosamente selecionadas, desde pratos clássicos até criações contemporâneas, todas criadas para inspirar e encantar seus sentidos. Nosso objetivo é oferecer não apenas receitas, mas uma experiência culinária completa, onde cada prato é uma aventura para o paladar. Além das receitas, você também encontrará dicas úteis, truques de cozinha e histórias por trás dos pratos, tudo projetado para tornar sua jornada na cozinha ainda mais gratificante. Seja você um novato na culinária ou um chef experiente em busca de novas inspirações, o Kakozinheiro é o seu parceiro confiável para explorar e experimentar a arte da gastronomia. Então, pegue seus utensílios, prenda o avental e embarque nesta jornada deliciosa conosco! </p>
                 </div>
                 <span class="destaque"><i class="fa-solid fa-star"></i> Receita em Destaque <i class="fa-solid fa-star"></i>
                 </span>
                 <div class="imagem-destaque">
                     <img src="imagens/receita-destaque.jpg" alt=" exemplo de receita">
                     <div class="descricao-destaque">
-                        <h1>Titulo receita</h1>
-                         <h2> Tipo de receita</h2>
-                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse ea unde nemo earum provident aperiam ullam dolores voluptates laborum, porro autem facere consequatur deserunt repellat dicta voluptatem totam est?
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum qui nulla velit cumque deserunt iure quia cupiditate beatae blanditiis iste perspiciatis dolorem, eaque veritatis maiores quis ullam vel et alias.
+                        <h1>Bolo de Laranja</h1>
+                         <h2> Bolos</h2>
+                         <p>
+                            Experimente a nossa nova receita de bolo de laranja, uma deliciosa combinação de sabores cítricos e maciez incomparável! Feito com suco fresco de laranja e uma pitada de raspas da casca para um aroma irresistível, este bolo vai conquistar seu paladar. A massa fofinha é complementada por uma cobertura de glacê de laranja, proporcionando uma explosão de sabor a cada mordida. Surpreenda sua família e amigos com este bolo de laranja irresistível que certamente será um sucesso em qualquer ocasião! Confira a receita completa no link abaixo
                         </p>
                     </div>
                     <a href="#"> Acesse Aqui</a>
@@ -118,15 +119,12 @@
         <div class="sobre" id="dados-sobre">
             <figure class="img-sobre">
                 <img src="imagens/logo-sobre.png" alt="Imagem do criador da página">
-                <figcaption>Imagem do criador da página e das receitas - <span class="autor">Kayque Knupp</span>
+                <figcaption>Imagem do idealizador da página - <span class="autor">Kayque Knupp</span>
                 </figcaption>
             </figure>
             <div class="dados-sobre">
                 <h2>Sobre</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex fuga, dolorem reprehenderit incidunt ducimus minima laborum dignissimos perferendis veritatis quisquam doloribus eligendi harum quo qui voluptates ipsam ratione blanditiis sequi.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam vero dolore reprehenderit sed excepturi eos porro non dolores rem, nihil doloribus, veniam corrupti odit iure ducimus maxime repudiandae laboriosam! Impedit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam pariatur ea dignissimos commodi eaque possimus laudantium nulla ad consequatur quisquam fugiat, ullam, quasi ex ut earum harum unde. Voluptas, officiis?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, accusamus quisquam sed, suscipit, autem nemo quam cum quod illum in ab earum distinctio reprehenderit voluptates qui iste maiores hic provident?</p>
+                <p>Conheça  Kayque, o talentoso chef por trás das delícias culinárias deste site! Com uma paixão inigualável pela gastronomia e uma mente criativa que se estende para além da cozinha, Kayque traz uma abordagem única para cada receita, combinando técnicas tradicionais com um toque moderno e inovador. Sua jornada na culinária começou como um hobby, mas rapidamente se transformou em uma verdadeira paixão. Além de sua habilidade na cozinha, Kayque também é um entusiasta da programação, trazendo sua experiência tecnológica para aprimorar ainda mais suas criações culinárias. Com ele, você descobrirá um mundo de sabores e experiências gastronômicas incomparáveis. Explore suas receitas e deixe-se levar pela magia da culinária reinventada por Kayque!</p>
             </div>
         </div>
         <div class="ir-ao-topo">
