--- a/bolos/index.html
+++ b/bolos/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- estilos-->
-    <link rel="stylesheet" href="estilos/style.css">
+    <!-- estilo padrao-->
+    <link rel="stylesheet" href="../estilos/style.css">
+    <!--Estilo interno-->
+    <link rel="stylesheet" href="css-interno/estilo.css">
 
     <!-- icones-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -21,10 +23,10 @@
             <div class="navbar-container">
                 <nav>  
                     <a href="#">
-                      <img src="imagens/logo.png" alt="Logo kakozinheiro" class="logo">
+                      <img src="../imagens/logo.png" alt="Logo kakozinheiro" class="logo">
                     </a>
                         <ul class="navbar-itens">
-                            <li> <a href="bolos/index.html"><span class="bolos">Bolos</span ></a></li>
+                            <li> <a href="#"><span class="bolos">Bolos</span ></a></li>
                             <li><a href="" id="caldos"><span class="caldos">Caldos</span></a></li>
                             <li><a href=""><span class="jantar">Jantar</span></a></li>
                             <li><a href=""><span class="sobremesas">Sobremesas</span></a></li>
@@ -50,7 +52,7 @@
                 <span class="destaque"><i class="fa-solid fa-star"></i> Receita em Destaque <i class="fa-solid fa-star"></i>
                 </span>
                 <div class="imagem-destaque">
-                    <img src="imagens/receita-destaque.jpg" alt=" exemplo de receita">
+                    <img src="../imagens/receita-destaque.jpg" alt=" exemplo de receita">
                     <div class="descricao-destaque">
                         <h1>Bolo de Laranja</h1>
                          <h2> Bolos</h2>
@@ -67,7 +69,7 @@
         <div class="novas-receitas">
            
             <div class="receita">
-                <img src="imagens/receita-exemplo.png" alt="receita de exemplo">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
                 <div class="descricao">
                     <h1>Titulo receita</h1>
                      <h2>Tipo de receita</h2>
@@ -78,7 +80,7 @@
                 <a href="#"> Acesse Aqui</a>
             </div>
             <div class="receita">
-                <img src="imagens/receita-exemplo.png" alt="receita de exemplo">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
                 <div class="descricao">
                     <h1>Titulo receita</h1>
                     <h2>Tipo de receita</h2>
@@ -89,7 +91,7 @@
         </div>
         <div class="novas-receitas">
             <div class="receita">
-                <img src="imagens/receita-exemplo.png" alt="receita de exemplo">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
                 <div class="descricao">
                     <h1>Titulo receita</h1>
                     <h2>Tipo de receita</h2>
@@ -98,7 +100,7 @@
                 <a href="#"> Acesse Aqui</a>
             </div>
             <div class="receita">
-                <img src="imagens/receita-exemplo.png" alt="receita de exemplo">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
                 <div class="descricao">
                     <h1>Titulo receita</h1>
                     <h2>Tipo de receita</h2>
@@ -118,7 +120,7 @@
         </div><!--Fim videos youtube-->
         <div class="sobre" id="dados-sobre">
             <figure class="img-sobre">
-                <img src="imagens/logo-sobre.png" alt="Imagem do criador da página">
+                <img src="../imagens/logo-sobre.png" alt="Imagem do criador da página">
                 <figcaption>Imagem do idealizador da página - <span class="autor">Kayque Knupp</span>
                 </figcaption>
             </figure>
