--- a/bolos/index.html
+++ b/bolos/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- estilo padrao-->
     <link rel="stylesheet" href="../estilos/style.css">
-    <!--Estilo interno-->
-    <link rel="stylesheet" href="css-interno/estilo.css">
-
+ 
     <!-- icones-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -15,6 +13,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">
+
+       <!--Estilo interno-->
+       <link rel="stylesheet" href="css-interno/estilo.css">
+     
+       <!--Estilo interno-->
+       <style>
+       a span.bolos{
+       border-bottom: 4px solid white;
+       border-radius:2px;
+       color: white;
+       }
+       </style>
 
     <title>Kakozinheiro</title>
 </head>
@@ -47,9 +57,9 @@
         <div class="pagina-destaque">
                 <div class="texto-receita-destaque">
                     <p>
-                        Bem-vindo ao Kakozinheiro, seu destino online para explorar o mundo da culinária de maneira inovadora e deliciosa! Aqui, você encontrará uma coleção diversificada de receitas cuidadosamente selecionadas, desde pratos clássicos até criações contemporâneas, todas criadas para inspirar e encantar seus sentidos. Nosso objetivo é oferecer não apenas receitas, mas uma experiência culinária completa, onde cada prato é uma aventura para o paladar. Além das receitas, você também encontrará dicas úteis, truques de cozinha e histórias por trás dos pratos, tudo projetado para tornar sua jornada na cozinha ainda mais gratificante. Seja você um novato na culinária ou um chef experiente em busca de novas inspirações, o Kakozinheiro é o seu parceiro confiável para explorar e experimentar a arte da gastronomia. Então, pegue seus utensílios, prenda o avental e embarque nesta jornada deliciosa conosco! </p>
+                        Receitas de bolo são guias detalhados que fornecem instruções passo a passo sobre como preparar diferentes tipos de bolos. Elas geralmente começam com uma lista de ingredientes necessários, seguida por instruções claras sobre como combinar e preparar esses ingredientes. As receitas podem variar desde simples bolos caseiros até elaboradas criações de confeitaria. Elas podem incluir informações sobre medidas precisas, técnicas de mistura, tempos e temperaturas de cozimento. Muitas vezes, também oferecem dicas e truques para garantir que o bolo saia perfeito. As receitas de bolo podem ser encontradas em livros de culinária, sites, blogs e até mesmo compartilhadas de boca em boca. Elas são essenciais para qualquer aspirante a padeiro ou entusiasta da cozinha que deseje criar deliciosas sobremesas para desfrutar com amigos e familiares. Que tal ter inspiração em receitas de sucesso?</p>
                 </div>
-                <span class="destaque"><i class="fa-solid fa-star"></i> Receita em Destaque <i class="fa-solid fa-star"></i>
+                <span class="destaque"><i class="fa-solid fa-star"></i> Bolos queridinhos <i class="fa-solid fa-star"></i>
                 </span>
                 <div class="imagem-destaque">
                     <img src="../imagens/receita-destaque.jpg" alt=" exemplo de receita">
@@ -61,7 +71,6 @@
                         </p>
                     </div>
                     <a href="#"> Acesse Aqui</a>
-                    
                 </div>
         </div>  <!--Fim destaque-->
         <!--Novas receitas-->
@@ -109,26 +118,6 @@
                 <a href="#"> Acesse Aqui</a>
             </div> 
         </div><!--Fim novas receitas-->
-        <span class="destaque">Vale apena assistir <i class="fa-brands fa-youtube" id="youtube"></i></span>
-        <div class="videos"><!-- Vídeos do Youtube-->
-            <div class="video">
-                    <iframe width="340" height="315" src="https://www.youtube.com/embed/BlOgafl1aa0?si=1Ax8IyAWpSTLOamp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-            <div class="video">
-                <iframe width="340" height="315" src="https://www.youtube.com/embed/_DgeMGtrHjc?si=CR6_0z_kIJ84Z9lm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-        </div><!--Fim videos youtube-->
-        <div class="sobre" id="dados-sobre">
-            <figure class="img-sobre">
-                <img src="../imagens/logo-sobre.png" alt="Imagem do criador da página">
-                <figcaption>Imagem do idealizador da página - <span class="autor">Kayque Knupp</span>
-                </figcaption>
-            </figure>
-            <div class="dados-sobre">
-                <h2>Sobre</h2>
-                <p>Conheça  Kayque, o talentoso chef por trás das delícias culinárias deste site! Com uma paixão inigualável pela gastronomia e uma mente criativa que se estende para além da cozinha, Kayque traz uma abordagem única para cada receita, combinando técnicas tradicionais com um toque moderno e inovador. Sua jornada na culinária começou como um hobby, mas rapidamente se transformou em uma verdadeira paixão. Além de sua habilidade na cozinha, Kayque também é um entusiasta da programação, trazendo sua experiência tecnológica para aprimorar ainda mais suas criações culinárias. Com ele, você descobrirá um mundo de sabores e experiências gastronômicas incomparáveis. Explore suas receitas e deixe-se levar pela magia da culinária reinventada por Kayque!</p>
-            </div>
-        </div>
         <div class="ir-ao-topo">
             <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
         </div>
