comecei atualizar as páginas de cada tipo de receita

--- a/bolos/index.html
+++ b/bolos/index.html
@@ -24,6 +24,18 @@
        border-radius:2px;
        color: white;
        }
+        .receita img{
+         box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.603);
+         border-radius: 10px;
+         min-width: 400px;
+        width: 20vw;
+        }
+        .descricao p{
+            text-align: justify;
+            min-width: 380px;
+            width: 20vw;
+        }
+   
        </style>
 
     <title>Kakozinheiro</title>
@@ -59,24 +71,10 @@
                     <p>
                         Receitas de bolo são guias detalhados que fornecem instruções passo a passo sobre como preparar diferentes tipos de bolos. Elas geralmente começam com uma lista de ingredientes necessários, seguida por instruções claras sobre como combinar e preparar esses ingredientes. As receitas podem variar desde simples bolos caseiros até elaboradas criações de confeitaria. Elas podem incluir informações sobre medidas precisas, técnicas de mistura, tempos e temperaturas de cozimento. Muitas vezes, também oferecem dicas e truques para garantir que o bolo saia perfeito. As receitas de bolo podem ser encontradas em livros de culinária, sites, blogs e até mesmo compartilhadas de boca em boca. Elas são essenciais para qualquer aspirante a padeiro ou entusiasta da cozinha que deseje criar deliciosas sobremesas para desfrutar com amigos e familiares. Que tal ter inspiração em receitas de sucesso?</p>
                 </div>
-                <span class="destaque"><i class="fa-solid fa-star"></i> Bolos queridinhos <i class="fa-solid fa-star"></i>
-                </span>
-                <div class="imagem-destaque">
-                    <img src="../imagens/receita-destaque.jpg" alt=" exemplo de receita">
-                    <div class="descricao-destaque">
-                        <h1>Bolo de Laranja</h1>
-                         <h2> Bolos</h2>
-                         <p>
-                            Experimente a nossa nova receita de bolo de laranja, uma deliciosa combinação de sabores cítricos e maciez incomparável! Feito com suco fresco de laranja e uma pitada de raspas da casca para um aroma irresistível, este bolo vai conquistar seu paladar. A massa fofinha é complementada por uma cobertura de glacê de laranja, proporcionando uma explosão de sabor a cada mordida. Surpreenda sua família e amigos com este bolo de laranja irresistível que certamente será um sucesso em qualquer ocasião! Confira a receita completa no link abaixo
-                        </p>
-                    </div>
-                    <a href="#"> Acesse Aqui</a>
-                </div>
-        </div>  <!--Fim destaque-->
-        <!--Novas receitas-->
-        <span class="destaque">Novas Receitas </span>
-        <div class="novas-receitas">
-           
+
+        <!--Todas as receitas-->
+        <span class="destaque">Todas as Receitas </span>
+        <div class="novas-receitas"> 
             <div class="receita">
                 <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
                 <div class="descricao">
@@ -97,6 +95,15 @@
                 </div>
                 <a href="#"> Acesse Aqui</a>
             </div> 
+            <div class="receita">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
+                <div class="descricao">
+                    <h1>Titulo receita</h1>
+                    <h2>Tipo de receita</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse ea unde nemo earum provident aperiam ullam dolores voluptates laborum, porro autem facere consequatur deserunt repellat dicta voluptatem totam est?</p>
+                </div>
+                <a href="#"> Acesse Aqui</a>
+            </div>
         </div>
         <div class="novas-receitas">
             <div class="receita">
@@ -117,7 +124,45 @@
                 </div>
                 <a href="#"> Acesse Aqui</a>
             </div> 
-        </div><!--Fim novas receitas-->
+            <div class="receita">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
+                <div class="descricao">
+                    <h1>Titulo receita</h1>
+                    <h2>Tipo de receita</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse ea unde nemo earum provident aperiam ullam dolores voluptates laborum, porro autem facere consequatur deserunt repellat dicta voluptatem totam est?</p>
+                </div>
+                <a href="#"> Acesse Aqui</a>
+            </div>
+        </div> <div class="novas-receitas">
+            <div class="receita">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
+                <div class="descricao">
+                    <h1>Titulo receita</h1>
+                    <h2>Tipo de receita</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse ea unde nemo earum provident aperiam ullam dolores voluptates laborum, porro autem facere consequatur deserunt repellat dicta voluptatem totam est?</p>
+                </div>
+                <a href="#"> Acesse Aqui</a>
+            </div>
+            <div class="receita">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
+                <div class="descricao">
+                    <h1>Titulo receita</h1>
+                    <h2>Tipo de receita</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse ea unde nemo earum provident aperiam ullam dolores voluptates laborum, porro autem facere consequatur deserunt repellat dicta voluptatem t'otam est?</p>
+                </div>
+                <a href="#"> Acesse Aqui</a>
+            </div> 
+            <div class="receita">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
+                <div class="descricao">
+                    <h1>Titulo receita</h1>
+                    <h2>Tipo de receita</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse ea unde nemo earum provident aperiam ullam dolores voluptates laborum, porro autem facere consequatur deserunt repellat dicta voluptatem totam est?</p>
+                </div>
+                <a href="#"> Acesse Aqui</a>
+            </div>
+        </div>
+        <!--Fim novas receitas-->
         <div class="ir-ao-topo">
             <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
         </div>
