add a infromçaõ no topo da pagina no que diz respeito ao tipo de receita

--- a/bolos/index.html
+++ b/bolos/index.html
@@ -71,9 +71,11 @@
                     <p>
                         Receitas de bolo são guias detalhados que fornecem instruções passo a passo sobre como preparar diferentes tipos de bolos. Elas geralmente começam com uma lista de ingredientes necessários, seguida por instruções claras sobre como combinar e preparar esses ingredientes. As receitas podem variar desde simples bolos caseiros até elaboradas criações de confeitaria. Elas podem incluir informações sobre medidas precisas, técnicas de mistura, tempos e temperaturas de cozimento. Muitas vezes, também oferecem dicas e truques para garantir que o bolo saia perfeito. As receitas de bolo podem ser encontradas em livros de culinária, sites, blogs e até mesmo compartilhadas de boca em boca. Elas são essenciais para qualquer aspirante a padeiro ou entusiasta da cozinha que deseje criar deliciosas sobremesas para desfrutar com amigos e familiares. Que tal ter inspiração em receitas de sucesso?</p>
                 </div>
-
+        <div class="bg-imagem-receita">
+            <span class="destaque">Bolos </span>
+        </div>
         <!--Todas as receitas-->
-        <span class="destaque">Todas as Receitas </span>
+        
         <div class="novas-receitas"> 
             <div class="receita">
                 <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
