links correlatos a pagina inicial

--- a/bolos/receitas-bolos/bolo-de-amendoas.html
+++ b/bolos/receitas-bolos/bolo-de-amendoas.html
@@ -75,10 +75,10 @@
         
         <div class="novas-receitas"> 
             <div class="receita">
-                <img src="../imagens/bolo-amendoas.jpg" alt="receita de exemplo">
+                <img src="../imagens/receita-exemplo.png" alt="receita de exemplo">
                 <div class="descricao">
-                    <h1>Bolo de Amêndoas</h1>
-                     <h2>Diiculdade: fácil</h2>
+                    <h1>Titulo receita</h1>
+                     <h2>Tipo de receita</h2>
                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse ea unde nemo earum provident aperiam ullam dolores voluptates laborum, porro autem facere consequatur deserunt repellat dicta voluptatem totam est?
                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum qui nulla velit cumque deserunt iure quia cupiditate beatae blanditiis iste perspiciatis dolorem, eaque veritatis maiores quis ullam vel et alias.
                     </p>
